# segformer

./: .gitignore  LICENSE  README.md  environment.yml  hubconf.py  pyproject.toml  setup.cfg
demo/: segment_image.py
segformer/: backbones.py  heads.py  model.py  timm.py
src/segformer/: backbones.py  heads.py  model.py
tests/: test_backbones.py  test_encoder_decoder.py  test_heads.py  test_hubconf.py  test_model.py
