[metadata]
name = segformer
version = 1.1.0
description = An unofficial redistribution of SegFormer for PyTorch Hub.
long_description = file: README.md
long_description_content_type = text/markdown
author = Aiden Nibali
classifiers =
    Programming Language :: Python :: 3
    Topic :: Multimedia :: Graphics
    Topic :: Scientific/Engineering :: Image Recognition

[options]
include_package_data = False
packages = segformer
python_requires = >=3.7
install_requires =
  torch

[options.extras_require]
test =
  pytest>=6.0

[options.packages.find]
where = src
